<resources>
    <string name="app_name">애완동물 사진 보기</string>
    <string name="strStart">선택을 시작하겠습니까?</string>
    <string name="strAgree">시작함</string>
    <string name="strAsk">좋아하는 애완동물은?</string>
    <string name="strDog">강아지</string>
    <string name="strCat">고양이</string>
    <string name="strRabbit">토끼</string>
    <string name="strOk">선택 완료</string>
    <string name="errSelect">동물을 먼저 선택하세요.</string>
    <string name="desPet">동물 사진</string>
</resources>
